[Abhinav]ADD: added the functionality of forgot password and reset password

--- a/pages/fundooLogin.html
+++ b/pages/fundooLogin.html
@@ -25,7 +25,7 @@
                     <label for="floatingPassword">Password*</label>
                 </div>
 
-                <a href="#" class="fundoo-login-forgot-password">Forgot password?</a>
+                <a href="forgotPassword.html" class="fundoo-login-forgot-password">Forgot password?</a>
 
                 <div class="fundoo-login-actions">
                     <a href="fundooSignUp.html" class="fundoo-login-create-account">Create account</a>
