--- a/pages/fundooLogin.html
+++ b/pages/fundooLogin.html
@@ -16,7 +16,7 @@
             <form id="fundoo-login-form">
 
                 <div class="form-floating mb-3">    
-                    <input type="email" class="form-control" id="floatingInput" placeholder="Email or phone">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="Email address">
                     <label for="floatingInput">Email address*</label>
                 </div>
 
@@ -25,7 +25,8 @@
                     <label for="floatingPassword">Password*</label>
                 </div>
 
-                <a href="forgotPassword.html" class="fundoo-login-forgot-password">Forgot password?</a>
+                <!-- Open Forgot Password Modal -->
+                <a href="#" class="fundoo-login-forgot-password" data-bs-toggle="modal" data-bs-target="#forgotPasswordModal">Forgot password?</a>
 
                 <div class="fundoo-login-actions">
                     <a href="fundooSignUp.html" class="fundoo-login-create-account">Create account</a>
@@ -35,6 +36,45 @@
             </form>
         </div>
     </div>
+
+    <!-- Forgot Password Modal -->
+    <div class="modal fade" id="forgotPasswordModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Forgot Password</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="forgot-password-form">
+                        <input type="email" id="forgot-email" class="form-control" placeholder="Enter your email" required>
+                        <button type="submit" class="btn btn-primary mt-2">Send OTP</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Reset Password Modal -->
+    <div class="modal fade" id="resetPasswordModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Reset Password</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="reset-password-form">
+                        <input type="text" id="otp" class="form-control" placeholder="Enter OTP" required>
+                        <input type="password" id="new-password" class="form-control mt-2" placeholder="Enter new password" required>
+                        <button type="submit" class="btn btn-success mt-2">Reset Password</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/fundooLogin.js"></script>
 </body>
 </html>
